# brew-status

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml  test-signing.yml
src/: main.css  main.html  main.ts  popup.css  popup.html  popup.ts  tauri.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  tray.rs  watcher.rs
src/shared/: chart.ts  formatters.ts  types.ts
